--- a/src/Makefile
+++ b/src/Makefile
@@ -17,9 +17,7 @@ consistency-readme:
 build-llvm:
 	if [ ! -d "$(LLVM_BLD)" ]; then \
 		mkdir -p $(LLVM_BLD); \
-		cd $(LLVM_BLD) && \
-		cmake $(LLVM_ARGS) $(LLVM_DIR); \
-		@cd ..; \
+		cd $(LLVM_BLD) && cmake $(LLVM_ARGS) $(LLVM_DIR); cd ..; \
 		make -C $(LLVM_BLD) -j${NJOB}; \
 	fi
 
